# vivarium

./: .gitignore  .repo-to-text-settings.yaml  Abstract Agent Machine PRD.txt  COMPREHENSIVE_SIMULATION_GUIDE.md  CONTRIBUTING.md  INTERPRETABILITY_CONFORMITY_EXPERIMENT.md  LICENSE  New Frame Work.txt  Olmo inspection.md  PROMPT_CATALOG.md  README.md  SETUP.md  TEMPERATURE_VERIFICATION_REPORT.md  TESTING_GUIDE.md  abstract_agent_machine_code_documentation.txt  debug_load.py  debug_load_mock.py  improvement_plan.md  pyproject.toml  readme_experiment_setup.md  repo-to-text_2025-12-18-06-47-18-UTC.txt  test_sparse_config.json  trace_analysis.ipynb  verify_features.sh
Analysis Scripts/: README.txt  comprehensive_run_analysis.ipynb  expanded_suite_behavioral_breakdown.py  generate_all_figures.py  generate_all_tables.py  generate_cross_temperature_figures.py  generate_figure1_behavioral.py  generate_figure2_tug_of_war.py  generate_figure3_turn_layer.py  generate_figure4_intervention.py  render_social_pressure_effect_strict.py  render_truth_override_heatmaps.py  report_generation_prompt.md  temperature_effect_analysis.py  utils.py
Comparing_Experiments/: analysis_log.txt  analysis_report.md  runs_metadata.json
notebooks/: experiment_db_inspector.ipynb  model_io_examples.md  olmo.ipynb  olmo_conformity_analytics.py
paper/: JUDGE_REPORT.md  LLM Social Conformity and Temperature.md  MECHANISTIC_INTERPRETABILITY_GUIDE.md  PaperPlan.txt  SAE_UPGRADE_PROMPT.md  SUPPLEMENTARY_VALIDATION.md  paper.tex
scripts/: audit_answer_parsing.md  audit_answer_parsing.py  audit_llm_judge_labeling.py  audit_paper_numbers.py  backfill_probe_projections_from_canonical.py  fix_correctness_evaluation.py  fix_social_conventions_ground_truth.py  generate_code_documentation.py  generate_complete_analysis.py  generate_pi_slides.py  generate_turn_layer_temperature_heatmaps.py  sample_scoring_cases.py
supplementary documentation /: AGENT_POLICY_SETTING.md  Experiment_Artifact_Analysis_20251217.md  (+13 more)
(+195 files in other folders)
